tinyc/test/bad/enum-redeclaration-single-local.c
int main()
{
    enum {
        x = 10,
        x = 10,
    };

    return 0;
}
